// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features Plugin returns OSS + registered features 1`] = `
Array [
  Feature {
    "config": Object {
      "app": Array [],
      "id": "baz",
      "name": "baz",
      "privileges": null,
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "icon": "discoverApp",
      "id": "discover",
      "name": "Discover",
      "navLinkId": "discover",
      "order": 100,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "discover",
            "kibana",
          ],
          "catalogue": Array [
            "discover",
          ],
          "savedObject": Object {
            "all": Array [
              "search",
              "query",
              "index-pattern",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "save",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "discover",
            "kibana",
          ],
          "catalogue": Array [
            "discover",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "query",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "icon": "visualizeApp",
      "id": "visualize",
      "name": "Visualize",
      "navLinkId": "visualize",
      "order": 200,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "visualize",
            "lens",
            "kibana",
          ],
          "catalogue": Array [
            "visualize",
          ],
          "savedObject": Object {
            "all": Array [
              "visualization",
              "query",
              "lens",
              "telemetry",
            ],
            "read": Array [
              "index-pattern",
              "search",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "delete",
            "save",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "visualize",
            "lens",
            "kibana",
          ],
          "catalogue": Array [
            "visualize",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "query",
              "lens",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "icon": "dashboardApp",
      "id": "dashboard",
      "name": "Dashboard",
      "navLinkId": "dashboards",
      "order": 300,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "dashboards",
            "kibana",
          ],
          "catalogue": Array [
            "dashboard",
          ],
          "savedObject": Object {
            "all": Array [
              "dashboard",
              "url",
              "query",
              "telemetry",
            ],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "timelion-sheet",
              "canvas-workpad",
              "lens",
              "map",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "createNew",
            "show",
            "showWriteControls",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "dashboards",
            "kibana",
          ],
          "catalogue": Array [
            "dashboard",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "timelion-sheet",
              "canvas-workpad",
              "map",
              "dashboard",
              "query",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "icon": "devToolsApp",
      "id": "dev_tools",
      "name": "Dev Tools",
      "navLinkId": "dev_tools",
      "order": 1300,
      "privileges": Object {
        "all": Object {
          "api": Array [
            "console",
          ],
          "app": Array [
            "dev_tools",
            "kibana",
          ],
          "catalogue": Array [
            "console",
            "searchprofiler",
            "grokdebugger",
          ],
          "savedObject": Object {
            "all": Array [
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "save",
          ],
        },
        "read": Object {
          "api": Array [
            "console",
          ],
          "app": Array [
            "dev_tools",
            "kibana",
          ],
          "catalogue": Array [
            "console",
            "searchprofiler",
            "grokdebugger",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "privilegesTooltip": "User should also be granted the appropriate Elasticsearch cluster and index privileges",
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "icon": "advancedSettingsApp",
      "id": "advancedSettings",
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "name": "Advanced Settings",
      "order": 1500,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "advanced_settings",
          ],
          "management": Object {
            "kibana": Array [
              "settings",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "config",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "save",
          ],
        },
        "read": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "advanced_settings",
          ],
          "management": Object {
            "kibana": Array [
              "settings",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [],
        },
      },
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "index_patterns",
      ],
      "icon": "indexPatternApp",
      "id": "indexPatterns",
      "management": Object {
        "kibana": Array [
          "index_patterns",
        ],
      },
      "name": "Index Pattern Management",
      "order": 1600,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "index_patterns",
          ],
          "management": Object {
            "kibana": Array [
              "index_patterns",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "index-pattern",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "save",
          ],
        },
        "read": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "index_patterns",
          ],
          "management": Object {
            "kibana": Array [
              "index_patterns",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "config",
              "url",
            ],
          },
          "ui": Array [],
        },
      },
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "icon": "savedObjectsApp",
      "id": "savedObjectsManagement",
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "name": "Saved Objects Management",
      "order": 1700,
      "privileges": Object {
        "all": Object {
          "api": Array [
            "copySavedObjectsToSpaces",
          ],
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "saved_objects",
          ],
          "management": Object {
            "kibana": Array [
              "objects",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "foo",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "read",
            "edit",
            "delete",
            "copyIntoSpace",
          ],
        },
        "read": Object {
          "api": Array [
            "copySavedObjectsToSpaces",
          ],
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "saved_objects",
          ],
          "management": Object {
            "kibana": Array [
              "objects",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "foo",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "read",
          ],
        },
      },
    },
    "subFeatures": Array [],
  },
]
`;

exports[`Features Plugin returns OSS + registered features with timielion when available 1`] = `
Array [
  Feature {
    "config": Object {
      "app": Array [],
      "id": "baz",
      "name": "baz",
      "privileges": null,
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "icon": "discoverApp",
      "id": "discover",
      "name": "Discover",
      "navLinkId": "discover",
      "order": 100,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "discover",
            "kibana",
          ],
          "catalogue": Array [
            "discover",
          ],
          "savedObject": Object {
            "all": Array [
              "search",
              "query",
              "index-pattern",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "save",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "discover",
            "kibana",
          ],
          "catalogue": Array [
            "discover",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "query",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "icon": "visualizeApp",
      "id": "visualize",
      "name": "Visualize",
      "navLinkId": "visualize",
      "order": 200,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "visualize",
            "lens",
            "kibana",
          ],
          "catalogue": Array [
            "visualize",
          ],
          "savedObject": Object {
            "all": Array [
              "visualization",
              "query",
              "lens",
              "telemetry",
            ],
            "read": Array [
              "index-pattern",
              "search",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "delete",
            "save",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "visualize",
            "lens",
            "kibana",
          ],
          "catalogue": Array [
            "visualize",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "query",
              "lens",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "icon": "dashboardApp",
      "id": "dashboard",
      "name": "Dashboard",
      "navLinkId": "dashboards",
      "order": 300,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "dashboards",
            "kibana",
          ],
          "catalogue": Array [
            "dashboard",
          ],
          "savedObject": Object {
            "all": Array [
              "dashboard",
              "url",
              "query",
              "telemetry",
            ],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "timelion-sheet",
              "canvas-workpad",
              "lens",
              "map",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "createNew",
            "show",
            "showWriteControls",
            "saveQuery",
          ],
        },
        "read": Object {
          "app": Array [
            "dashboards",
            "kibana",
          ],
          "catalogue": Array [
            "dashboard",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "search",
              "visualization",
              "timelion-sheet",
              "canvas-workpad",
              "map",
              "dashboard",
              "query",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "subFeatures": Array [
        Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    "subFeatures": Array [
      SubFeature {
        "config": Object {
          "name": "Short URLs",
          "privilegeGroups": Array [
            Object {
              "groupType": "independent",
              "privileges": Array [
                Object {
                  "id": "url_create",
                  "includeIn": "all",
                  "name": "Create Short URLs",
                  "savedObject": Object {
                    "all": Array [
                      "url",
                    ],
                    "read": Array [],
                  },
                  "ui": Array [
                    "createShortUrl",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
  Feature {
    "config": Object {
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "icon": "devToolsApp",
      "id": "dev_tools",
      "name": "Dev Tools",
      "navLinkId": "dev_tools",
      "order": 1300,
      "privileges": Object {
        "all": Object {
          "api": Array [
            "console",
          ],
          "app": Array [
            "dev_tools",
            "kibana",
          ],
          "catalogue": Array [
            "console",
            "searchprofiler",
            "grokdebugger",
          ],
          "savedObject": Object {
            "all": Array [
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
            "save",
          ],
        },
        "read": Object {
          "api": Array [
            "console",
          ],
          "app": Array [
            "dev_tools",
            "kibana",
          ],
          "catalogue": Array [
            "console",
            "searchprofiler",
            "grokdebugger",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "show",
          ],
        },
      },
      "privilegesTooltip": "User should also be granted the appropriate Elasticsearch cluster and index privileges",
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "icon": "advancedSettingsApp",
      "id": "advancedSettings",
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "name": "Advanced Settings",
      "order": 1500,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "advanced_settings",
          ],
          "management": Object {
            "kibana": Array [
              "settings",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "config",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "save",
          ],
        },
        "read": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "advanced_settings",
          ],
          "management": Object {
            "kibana": Array [
              "settings",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [],
        },
      },
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "index_patterns",
      ],
      "icon": "indexPatternApp",
      "id": "indexPatterns",
      "management": Object {
        "kibana": Array [
          "index_patterns",
        ],
      },
      "name": "Index Pattern Management",
      "order": 1600,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "index_patterns",
          ],
          "management": Object {
            "kibana": Array [
              "index_patterns",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "index-pattern",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "save",
          ],
        },
        "read": Object {
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "index_patterns",
          ],
          "management": Object {
            "kibana": Array [
              "index_patterns",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "config",
              "url",
            ],
          },
          "ui": Array [],
        },
      },
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "icon": "savedObjectsApp",
      "id": "savedObjectsManagement",
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "name": "Saved Objects Management",
      "order": 1700,
      "privileges": Object {
        "all": Object {
          "api": Array [
            "copySavedObjectsToSpaces",
          ],
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "saved_objects",
          ],
          "management": Object {
            "kibana": Array [
              "objects",
            ],
          },
          "savedObject": Object {
            "all": Array [
              "foo",
              "telemetry",
            ],
            "read": Array [
              "config",
              "url",
            ],
          },
          "ui": Array [
            "read",
            "edit",
            "delete",
            "copyIntoSpace",
          ],
        },
        "read": Object {
          "api": Array [
            "copySavedObjectsToSpaces",
          ],
          "app": Array [
            "kibana",
          ],
          "catalogue": Array [
            "saved_objects",
          ],
          "management": Object {
            "kibana": Array [
              "objects",
            ],
          },
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "foo",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "read",
          ],
        },
      },
    },
    "subFeatures": Array [],
  },
  Feature {
    "config": Object {
      "app": Array [
        "timelion",
        "kibana",
      ],
      "catalogue": Array [
        "timelion",
      ],
      "icon": "timelionApp",
      "id": "timelion",
      "name": "Timelion",
      "navLinkId": "timelion",
      "order": 350,
      "privileges": Object {
        "all": Object {
          "app": Array [
            "timelion",
            "kibana",
          ],
          "catalogue": Array [
            "timelion",
          ],
          "savedObject": Object {
            "all": Array [
              "timelion-sheet",
              "telemetry",
            ],
            "read": Array [
              "index-pattern",
              "config",
              "url",
            ],
          },
          "ui": Array [
            "save",
          ],
        },
        "read": Object {
          "app": Array [
            "timelion",
            "kibana",
          ],
          "catalogue": Array [
            "timelion",
          ],
          "savedObject": Object {
            "all": Array [],
            "read": Array [
              "index-pattern",
              "timelion-sheet",
              "config",
              "url",
            ],
          },
          "ui": Array [],
        },
      },
    },
    "subFeatures": Array [],
  },
]
`;
